# usda-fdc-loader

./: .gitignore  config.yml  init.sql  license.txt  nutrients.csv  pyproject.toml  readme.md  requirements.txt
foodprep/: __init__.py  __main__.py  const.py  dataset.py  dataset_models.py  fdc_models.py  serde.py  utils.py
